Undo temporary libpas fix for PlayStation https://bugs.webkit.org/show_bug.cgi?id=241425

Reviewed by Don Olmstead.

* Source/bmalloc/libpas/src/libpas/pas_random.h:
(pas_get_secure_random):
Remove ifdef, as this has now been addressed downstream.

Canonical link: https://commits.webkit.org/251393@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295386 268f45cc-cd09-0410-ab3c-d52691b4dbfc